--- a/libraries/frameworks/io2012/partials/logoslide.html
+++ b/libraries/frameworks/io2012/partials/logoslide.html
@@ -5,6 +5,12 @@
       <span>
         <img width='300px' src="{{ page.url.assets }}/img/{{ page.biglogo }}">
       </span>
+      <br>
+      <h1>
+      	Gokul Gardens
+      </h1>
+          <em>Press down up/down arrow key to navigate through this presentation</em>
     </article>
+
   </slide>
 {{/ page.biglogo }}
