--- a/libraries/frameworks/io2012/css/default.css
+++ b/libraries/frameworks/io2012/css/default.css
@@ -4,7 +4,7 @@
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
+del, dfn,  img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
@@ -1355,10 +1355,16 @@ aside.gdbar img {
 }
 /* line 940, ../scss/default.scss */
 .title-slide hgroup p {
-  font-size: 20px;
-  color: #797979;
+  font-size: 30px;
+  color: #414d65;
   line-height: 1.3;
   margin-top: 2em;
+  background-color: rgba(255, 255, 255, .498039);
+  border-radius: 4px 4px 4px 2px;
+  padding:10px;
+  line-height: 1.3;
+  margin-top: 2em;
+  font-weight: bold;
 }
 
 /* line 949, ../scss/default.scss */
