--- a/libraries/frameworks/io2012/css/slidify.css
+++ b/libraries/frameworks/io2012/css/slidify.css
@@ -352,8 +352,9 @@ pre code {
 }
 
 .title-slide {
-  background-color: #CBE7A5; /* #EDE0CF; ; #CA9F9D*/
-  /* background-image:url(http://goo.gl/EpXln); */
+  /*background-color: #CBE7A5;  #EDE0CF; ; #CA9F9D*/
+  background-image:url("Cover.jpg");
+  /*background-image:url(http://goo.gl/EpXln);*/
 }
 
 .title-slide hgroup > h1{
@@ -362,7 +363,10 @@ pre code {
 
 .title-slide hgroup > h1, 
 .title-slide hgroup > h2 {
-  color: #535E43 ;  /* ; #EF5150*/
+  color: #EF5150 ;  /* #535E43; */
+  background-color: rgba(255, 255, 255, .498039);
+  border-radius: 4px 4px 4px 2px;
+  padding:10px;
 }
 
 
