--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -20,13 +20,13 @@ em {
 }
 
 p {
-	background-color: rgba(255, 255, 255, .1);
+	background-color: rgba(255, 255, 255, .80);
 	border-radius: 4px 4px 4px 2px;
 	padding: 10px;
 }
 
 article p, article li, article li.build, section p, section li {
-	background-color: rgba(255, 255, 255, .10);
+	background-color: rgba(255, 255, 255, .80);
 	border-radius: 4px 4px 4px 2px;
 	padding-left: 5px;
 	padding-right: 5px;
@@ -37,4 +37,17 @@ img {
 	max-height: 560px;
 	max-width: 978px;
 }
+
+slide:not(.segue) h2 {
+	font-family: "Open Sans Condensed";
+	font-weight: 700;
+	color: darkslategray;
+	background-color: rgba(255, 255, 255, .80);
+	border-radius: 4px 4px 4px 2px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+#slide-1 {
+	background: url(Masterplan-plots-layout.jpg)
 }
